<resources>
    <string name="app_name">MineSweeper</string>

    <string name="new_game">New Game</string>
    <string name="leave_game">Leave Game</string>
    <string name="are_you_sure_you_want_to_leave_game">Are you sure you want to leave game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="intermediate">Intermediate</string>
    <string name="hard">Hard</string>
    <string name="custom">Custom</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="mines">Mines</string>
    <string name="color">Color</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="colorful_numbers">Colorful Numbers</string>
    <string name="changes_appear_in_new_game">Changes appear in new game.</string>
    <string name="last_saved">Last saved</string>
    <string name="default_settings">Default settings</string>
</resources>
